--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,111 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.list li{
+  margin: 7px;
+}
+
+.head-text{
+  text-align: center;
+  background-color: rgb(44, 43, 43);
+  color: whitesmoke;
+  padding: 20px;
+}
+
+.foot-text{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: rgb(44, 43, 43);
+  color: whitesmoke;
+  text-align: center;
+}
+
+
+.userlist{
+  list-style: none;
+  padding: 0;
+}
+
+.middle h4,.list,main{
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.middle{
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.border{
+  border: 1px gray solid;
+}
+
+.notificationContainer {
+  color: black;
+  text-decoration: none;
+  padding: 5px 10px;
+  position: relative;
+  display: inline-block;
+}
+
+.notificationContainer .notificationBadge {
+  position: absolute;
+  top: -15px;
+  right: -19px;
+  padding: 5px 10px;
+  border-radius: 90px;
+  background-color: #f50057;
+  color: white;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  left: -3px;
+  top: 40px;
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  color: black;
+  background: white;
+  padding: 12px 16px;
+  border-radius: 2px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+.navbar-rightSide{
+  display: block;
+}
+
+.hamburger{
+  display: none;
+}
+
+@media screen and (max-width:430px){
+  .navbar-rightSide{
+    display: none;
+  }
+  .hamburger{
+    display: block;
+  }
+}
